-audio tags now support start and stop arguments, e.g. <audio ...
 start="1" stop="2"> will play the sound file from 1 to 2 seconds.
-Fix crash when cancelling duplicate insertion while converting cards
 (reported by Gnome).
-Make detection of unused media files more robust with case insensitive
 filesystems (reported by Pawel Szerszon and Gnome).
-Fix for rare hangs 'assert interval == 0' (reported by Tom Cato).
-Translation fixes when converting between card types (reported by Gnome and
 Chris Schmidt).
-Make terminology in 'Current card' statistics more consistent with the card
 browser (reported by Henrik Giaever).


Mnemosyne 2.0.1 : 2012-08-02

-Fix occasional hang during review (Thanks to Scott Youngman and Chris Shanks
 for helping to debug this).
-In cloze card types, you can now provide hints, e.g. [cloze:hint] will show
 [hint] in the question as opposed to [...]
-Added Sentence card type plugin. If you put this in the 'Sentence' field:
 "La [casa:house] es [grande:big]", you'll get three sister cards with the
 following questions: "La casa es grande", "La [house] es grande",
 "La casa es [big]"
-Fix bug where the wrong clone would be renamed (reported by Herman Gunn).
-Take size of media player widget (Linux only) into account when calculating
 the optimal split between question and answer.
-Fixed bug where card appearance settings would not be synced between different
 machines.
-Fixed issue in Activate cards, where a set without a name and a saved set
 would interfere.
-The dialog where you name saved sets is now a combobox which also list the
 current saved sets, to allow for easier updating of a saved set.
-Message boxes are now centered over the current window (card browser, ...) as
 opposed to the main window.
-Longer initial interval if the first grade you gave a card is 5.
-Fixing card merging losing information on Vocabulary card types (reported by
 Stephan Maseizik).
-Before merging cards, more information is presented on the data that is